--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     
     <p>
         <nav>
-            <a href="./main.html">home</a>  //
+            <a href="./index.html">home</a>  //
             <a href="./personal.html">about me</a> //
             <a href="./contact.html">contact</a>
         </nav>
