--- a/personal.html
+++ b/personal.html
@@ -21,7 +21,7 @@
     </main>
     <p>
         <nav>
-            <a href="./main.html">home</a>  //
+            <a href="./index.html">home</a>  //
             <a href="./personal.html">about me</a> //
             <a href="./contact.html">contact</a>
         </nav>
