--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
 
     <main>
         <p>
-            <a href="https://github.com/jwonges">github</a>  //
-            <a href="https://www.linkedin.com/in/jwonges/">linkedin</a> 
+            <a href="https://github.com/jwonges" target="_blank">github</a>  //
+            <a href="https://www.linkedin.com/in/jwonges/" target="_blank">linkedin</a> 
         </p>
         <p>e-mail:</p><textarea id="copy-text">jessica.wonges@uni-duesseldorf.de</textarea><br>
         <button onclick="copyToClipboard()">Copy to Clipboard</button>
