--- a/personal.html
+++ b/personal.html
@@ -9,26 +9,29 @@
 
 <div class="center">
 <body>
-    <header>
-        <h1><i>JESSICA WONGES</i></h1>
-    </header>
-    <main>
-        <p>I was born in 1997 in <a href ="https://www.lonelyplanet.com/indonesia/java/surabaya">Surabaya</a>, <a href="https://www.lonelyplanet.com/indonesia">Indonesia</a>, into a family that represents a melting pot of <a href="https://en.wikipedia.org/wiki/Culture_of_Indonesia">diverse Indonesian cultures</a>. As a result, I can speak and/or understand several local languages, including <a href="https://en.wikipedia.org/wiki/Javanese_language">Javanese</a>, <a href="https://en.wikipedia.org/wiki/Gorontalo%E2%80%93Mongondow_languages">Gorontalo</a>, and <a href="https://en.wikipedia.org/wiki/Larantuka_Malay">Larantuka</a>. This rich cultural background sparked my passion for language learning and my curiosity about different cultures internationally. Currently, I am learning Chinese to connect with <a href="https://en.wikipedia.org/wiki/Chinese_Indonesians">my roots</a> and French for fun.</p>
-        <p>In 2015, I moved to <a href="https://www.lonelyplanet.com/germany">Germany</a> to pursue higher education. Since then, I have lived in <a href="https://www.schwaebischhall.de/en/welcome/welcome">Schwäbisch Hall</a>, <a href="https://www.muenchen.de/en/home">Munich</a>, <a href="https://halle.de/">Halle (Saale)</a>, and currently reside in <a href="https://www.visitduesseldorf.de/en">Düsseldorf</a>. Learning German and adapting to a new culture was certainly challenging, but with persistence and the unwavering support of family and friends, I have successfully built a life here.</p>
-        <p>To balance things out, I also enjoy creative activities such as drawing, singing, playing the guitar and gaming in my spare time. </p>
-
-        <img src="junimo-stardew-valley.gif" alt="Description of the image" height="55">
-    </main>
     <p>
         <nav>
-            <a href="./index.html">home</a>  //
-            <a href="./personal.html">about me</a> //
+            <a href="./index.html">home</a> <img src="/images/dot.gif">
+            <a href="./personal.html">about me</a> <img src="/images/dot.gif">
             <a href="./contact.html">contact</a>
         </nav>
     </p>
-</div>
 
+    <header>
+        <h1><i>JESSICA WONGES</i></h1>
+    </header>
+
+    <div class="container">
+        <main>
+            <p>I was born in 1997 in <a href ="https://www.lonelyplanet.com/indonesia/java/surabaya" target="_blank">Surabaya</a>, <a href="https://www.lonelyplanet.com/indonesia" target="_blank">Indonesia</a>, into a family that represents a melting pot of <a href="https://en.wikipedia.org/wiki/Culture_of_Indonesia" target="_blank">diverse Indonesian cultures</a>. As a result, I can speak and/or understand several local languages, including <a href="https://en.wikipedia.org/wiki/Javanese_language" target="_blank">Javanese</a>, <a href="https://en.wikipedia.org/wiki/Gorontalo%E2%80%93Mongondow_languages" target="_blank">Gorontalo</a>, and <a href="https://en.wikipedia.org/wiki/Larantuka_Malay" target="_blank">Larantuka</a>. This rich cultural background sparked my passion for language learning and my curiosity about different cultures internationally. Currently, I am learning Chinese to connect with <a href="https://en.wikipedia.org/wiki/Chinese_Indonesians" target="_blank">my roots</a> and French for fun.</p>
+            <p>In 2015, I moved to <a href="https://www.lonelyplanet.com/germany" target="_blank">Germany</a> to pursue higher education. Since then, I have lived in <a href="https://www.schwaebischhall.de/en/welcome/welcome" target="_blank">Schwäbisch Hall</a>, <a href="https://www.muenchen.de/en/home" target="_blank">Munich</a>, <a href="https://halle.de/" target="_blank">Halle (Saale)</a>, and currently reside in <a href="https://www.visitduesseldorf.de/en" target="_blank">Düsseldorf</a>. Learning German and adapting to a new culture was certainly challenging, but with persistence and the unwavering support of family and friends, I have successfully built a life here.</p>
+            <img src="./images/pacman.gif" alt="Stardew Valley Junimo" height="20">
+            <p>To balance things out, I also enjoy creative activities such as drawing, singing, playing the guitar and gaming in my spare time. </p>
+        </main>
+    </div>
+    </div>
 </body>
+</div>
 
 </html>
 
