about me rename and  page fix, css change

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <p>
         <nav>
             <a href="./index.html">home</a> <img src="/images/dot.gif">
-            <a href="./personal.html">about me</a> <img src="/images/dot.gif">
+            <a href="./aboutme.html">about me</a> <img src="/images/dot.gif">
             <a href="./contact.html">contact</a>
         </nav>
     </p>
@@ -23,7 +23,7 @@
 
     <div class="container">
         <main>
-            <p>I was born in 1997 in <a href ="https://www.lonelyplanet.com/indonesia/java/surabaya" target="_blank">Surabaya</a>, <a href="https://www.lonelyplanet.com/indonesia" target="_blank">Indonesia</a>, into a family that represents a melting pot of <a href="https://en.wikipedia.org/wiki/Culture_of_Indonesia" target="_blank">diverse Indonesian cultures</a>. As a result, I can speak and/or understand several local languages, including <a href="https://en.wikipedia.org/wiki/Javanese_language" target="_blank">Javanese</a>, <a href="https://en.wikipedia.org/wiki/Gorontalo%E2%80%93Mongondow_languages" target="_blank">Gorontalo</a>, and <a href="https://en.wikipedia.org/wiki/Larantuka_Malay" target="_blank">Larantuka</a>. This rich cultural background sparked my passion for language learning and my curiosity about different cultures internationally. Currently, I am learning Chinese to connect with <a href="https://en.wikipedia.org/wiki/Chinese_Indonesians" target="_blank">my roots</a> and French for fun.</p>
+            <p>I was born in 1997 in <a href ="https://www.lonelyplanet.com/indonesia/java/surabaya" target="_blank">Surabaya</a>, <a href="https://www.lonelyplanet.com/indonesia" target="_blank">Indonesia</a>, into a family that represents a melting pot of <a href="https://en.wikipedia.org/wiki/Culture_of_Indonesia" target="_blank">diverse Indonesian cultures</a>. As a result, I can speak and/or understand several local languages, including <a href="https://en.wikipedia.org/wiki/Javanese_language" target="_blank">Javanese</a> and <a href="https://en.wikipedia.org/wiki/Manado_Malay" target="_blank">Manadonese</a>. This rich cultural background sparked my passion for language learning and my curiosity about different cultures internationally. Currently, I am learning Chinese to connect with <a href="https://en.wikipedia.org/wiki/Chinese_Indonesians" target="_blank">my roots</a>, Japanese and French for fun.</p>
             <p>In 2015, I moved to <a href="https://www.lonelyplanet.com/germany" target="_blank">Germany</a> to pursue higher education. Since then, I have lived in <a href="https://www.schwaebischhall.de/en/welcome/welcome" target="_blank">Schwäbisch Hall</a>, <a href="https://www.muenchen.de/en/home" target="_blank">Munich</a>, <a href="https://halle.de/" target="_blank">Halle (Saale)</a>, and currently reside in <a href="https://www.visitduesseldorf.de/en" target="_blank">Düsseldorf</a>. Learning German and adapting to a new culture was certainly challenging, but with persistence and the unwavering support of family and friends, I have successfully built a life here.</p>
             <img src="./images/pacman.gif" alt="Stardew Valley Junimo" height="20">
             <p>To balance things out, I also enjoy creative activities such as drawing, singing, playing the guitar and gaming in my spare time. </p>
