--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>
         <nav>
             <a href="./index.html">home</a> <img src="/images/dot.gif">
-            <a href="./personal.html">about me</a> <img src="/images/dot.gif">
+            <a href="./aboutme.html">about me</a> <img src="/images/dot.gif">
             <a href="./contact.html">contact</a>
         </nav>
     </p>
