--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
             <p>My current research interests focus on <a href="https://www.ibm.com/topics/quantum-computing" target="_blank">quantum computing</a>, which involves quantum optics, quantum information, and solid-state physics. </p>
             <p> I am currently seeking internship or student job opportunities in these areas to explore potential career paths and determine the direction I would like to pursue. In this winter semester, I am working under <a href="https://www.solid-state-physics.hhu.de/" target="_blank">Prof. Dr. Thomas Heinzel</a> as a student assistant.</p>
-            <p>I hold a Bachelor of Science degree in Medical Physics, and I completed my thesis on theoretical soft matter under the supervision of <a href="https://www2.thphy.uni-duesseldorf.de/index.php" target="_blank">Prof. Dr. Harmut Löwen</a>. The thesis is available on my GitHub.</p>
-            <p>Click here for my curriculum vitae! (under construction)</p>
+            <p>I hold a Bachelor of Science degree in Medical Physics, and I completed my thesis on theoretical soft matter under the supervision of <a href="https://www2.thphy.uni-duesseldorf.de/index.php" target="_blank">Prof. Dr. Harmut Löwen</a>. The thesis is available on my <a href="https://github.com/jwonges/PredPreyDynamicsPeriodicBoundary" target="_blank">github</a>.</p>
+            <p>Click <a href="CV_Jessica_Wonges.pdf" target="_blank">here</a> to see my curriculum vitae!</p>
             <a href="https://en.wikipedia.org/wiki/Schr%C3%B6dinger%27s_cat" target ="_blank"><img src="./images/cat-rolling.gif" alt="Schrödinger's Cat" id="imshake" width="50" height="50"></a>
         </main>
     </div>
